--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -1310,6 +1310,7 @@ footer i:hover{
       text-transform: uppercase;
       color: $secondary-color;
       font-size: 2.5rem;
+      margin: 0 0 2.5% 0;
     }
     p{
       margin-bottom: 0.9rem;
@@ -1347,6 +1348,10 @@ footer i:hover{
         background-color: $main-color;
         border-radius: 50%;
         margin: 5% 0 0 5%;
+        p{
+          line-height: 1;
+          margin: 0 !important;
+        }
       }
       .module-description{
         font-size: 1.5rem;
@@ -1371,7 +1376,6 @@ footer i:hover{
       }
     }
   }
-
 
 .familiar-photo{
   display: flex;
@@ -1676,8 +1680,14 @@ footer{
     display: -webkit-flex;
     flex-flow: wrap column;
     .module-item{
+    justify-content: space-around;
     .number{
-      justify-content: flex-end;
+      // justify-content: flex-end;
+      margin: 5% 0 0 0;
+    }
+    .module-description{
+      width: 60%;
+      margin: 5% 0;
     }
   }
 }
@@ -1687,6 +1697,12 @@ footer{
   margin: 5% 0;
   img{
   max-height: 550px;
+  }
+}
+
+#r-wip, #siab-wip{
+  h2{
+    margin: 2.5% 0;
   }
 }
 
@@ -1771,6 +1787,21 @@ footer{
   .familiar{
     width: 60%;
   }
+}
+
+  .module{
+    flex-flow: wrap row;
+    .module-item{
+      width: 60%;
+      margin: 2.5% 0 0 0; 
+    }
+    .module-item:last-child{
+      margin: 2.5% 0 0 0; 
+    }
+  }
+
+#module-right{
+ margin: 2.5% 0 0 40%;
 }
 
 //404
