--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -282,17 +282,30 @@ main{
   color: $accent-color;   
   display: -webkit-flex;
   display: flex;
-  justify-content: space-between;
+  flex-flow: wrap column;
+  justify-content: center;
   align-items: center;
-  padding: 1vh 5vw;
-  width: 90vw;
-  height: 8vh;
+  padding: 2em 0;
+  width: 100%;
 }
 
 .logo{
-  width: 25%;
+  width: 40%;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+
+#home-menu{
+  padding-top: 1em;
+  li{
+    display: block;
+    margin: 2.5%;
+    text-transform: uppercase;
+  }
+}
 /* ==========================================================================
    MENU STYLES
    ========================================================================== */
@@ -1078,7 +1091,6 @@ footer i:hover{
     float: left;
     height: 42px;
     white-space: nowrap; /*added because text was overflowing button */
-    font-size: .8rem; /*added because text was overflowing button */
   }
 
 
@@ -1576,6 +1588,23 @@ button{
 // HEADER
 .logo{
   width: 10%;
+  padding-right: 2.5%;
+}
+
+.page-header{
+  flex-flow: wrap row;
+  justify-content: space-around;
+}
+
+#home-menu{
+  width: 40%;
+  padding-left: 2.5%;
+  padding-top: 0;
+  li{
+  display: inline;
+  font-size: 1.5rem;
+
+}
 }
 
 //WELCOME
@@ -1586,7 +1615,7 @@ button{
   .welcome-container{
     width: 90%;
     flex-flow: nowrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
 
