--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -1732,6 +1732,97 @@ button{
   }
 }
 
+
+/* ==========================================================================
+   EMAIL THANK YOU
+   ========================================================================== */
+#email-thank-you{
+    background-color: $standard-grey;
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    header{
+      display: flex;
+      display: -webkit-flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+      background: url('../img/freelance-plan-aleia-walker.jpg');
+      background-position: center top;
+      background-size: cover;
+      width: 100%;
+      figure{ 
+        img{
+          max-height: 100px;
+          margin: 5% 0;
+          width: 100%;
+        }
+      }
+      .header-content{
+        padding: 2.5% 0;
+        width: 100%;
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: row wrap;
+        div{
+        background: rgba(1, 22, 39, 0.6);
+        padding: 5%;
+        width: 75%;
+        h1{
+          @include font-display;
+          font-size: 3.25rem;
+          color: $secondary-color;
+          margin-bottom: 2.5%;
+        }
+        p{
+          color: $standard-grey;
+          font-size: 1.25rem;
+          line-height: 1.3;
+        }
+      }
+      }
+    }
+    .thank-you-content{
+      display: flex;
+      display: -webkit-flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2.5% 0;
+      text-align: left;
+      .thank-you-content-wrapper{
+        width: 80%;
+          font-size: 1.25rem;
+        p{
+          // margin-bottom: .75rem;
+        }
+        ul{
+          text-align: left;
+          margin: 2.5% 0;
+          li{
+          display: block;
+          }
+          i{
+            font-size: .75rem;
+          }
+        }
+        button{
+          background-color: $button-color;
+          margin: 1.5rem 0;
+          a{
+            color: white;
+            font-size: 1.25rem;
+          }
+        }
+      }
+    }
+  }
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
