--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -1478,6 +1478,65 @@ body {
           font-size: 1.25rem; }
 
 /* ==========================================================================
+    Freelance Library
+   ========================================================================== */
+#freelance-library {
+  background-color: #EEEEEE;
+  color: #011627;
+  font-family: "Montserrat Light", sans-serif;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  background: url("../img/freelance-library-header.png") center;
+  background-size: cover;
+  height: 600px;
+  padding: 2.5% 0; }
+  #freelance-library aside {
+    font-size: 1.75rem;
+    color: #011627;
+    width: 80%; }
+    #freelance-library aside .display {
+      text-transform: uppercase; }
+    #freelance-library aside span {
+      font-family: "Montserrat Light", sans-serif;
+      color: white; }
+    #freelance-library aside p {
+      background: rgba(239, 255, 233, 0.8);
+      padding: 2.5%;
+      margin: 1.25% 0; }
+
+#freelance-library-content {
+  background: url();
+  background-color: #011627; }
+  #freelance-library-content .fp-solution-wrapper {
+    background-color: rgba(255, 255, 255, 0.6); }
+
+#freelance-library-container span {
+  font-family: 'NarzissRegular-Drops';
+  text-transform: uppercase;
+  text-transform: uppercase; }
+#freelance-library-container h2 {
+  text-transform: uppercase;
+  font-size: 2.5rem; }
+
+#freelance-library-buy {
+  text-align: left;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap row; }
+  #freelance-library-buy figure img {
+    max-width: 350px; }
+  #freelance-library-buy span {
+    font-size: 1.75rem; }
+
+.strikethrough {
+  text-decoration: line-through;
+  color: #E71D36; }
+
+/* ==========================================================================
    Helper classes
    ========================================================================== */
 /*
@@ -1836,7 +1895,13 @@ body {
     #links .links-wrapper article div {
       width: 40%;
       padding: 2.5%;
-      margin: 1.25%; } }
+      margin: 1.25%; }
+
+  #freelance-library-buy {
+    justify-content: space-around;
+    flex-flow: nowrap; }
+    #freelance-library-buy div {
+      width: 45%; } }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */ }
 /* ==========================================================================
