--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -1824,6 +1824,78 @@ button{
 
 
 /* ==========================================================================
+    Freelance Library
+   ========================================================================== */
+   #freelance-library{
+    background-color: $accent-grey;
+    color: $main-color;
+    font-family: $font-body;
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    align-items: center;
+    background: url('../img/freelance-library-header.png') center;
+    background-size: cover;
+    height: 600px;
+    padding: 2.5% 0;
+      aside{
+        font-size: 1.75rem;
+        color: $main-color;
+        width: 80%;
+        .display{
+          text-transform: uppercase;
+        }
+        span{
+          font-family: $font-body;
+          color: white;
+        }
+      p{
+        background: rgba(239, 255, 233, 0.8);
+        padding: 2.5%;
+        margin: 1.25% 0;
+      }
+      }
+   }
+
+#freelance-library-content{
+    background: url();
+    background-color: $main-color;
+    .fp-solution-wrapper{
+      background-color: rgba(255, 255, 255, 0.6);
+    }
+  }
+
+  #freelance-library-container{
+    span{
+      @include font-display;
+      text-transform: uppercase;
+    }
+    h2{
+      text-transform: uppercase;
+      font-size: 2.5rem;
+    }
+  }
+
+#freelance-library-buy{
+  text-align: left;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap row;
+  figure img{
+    max-width: 350px;
+  }
+  span{
+    font-size: 1.75rem;
+  }
+}
+
+ .strikethrough{
+      text-decoration: line-through;
+      color: $button-color;
+    }
+/* ==========================================================================
    Helper classes
    ========================================================================== */
 
@@ -2395,6 +2467,16 @@ article{
         margin: 1.25%;
       }
     }
+  }
+}
+
+// Freelance Library
+
+#freelance-library-buy{
+  justify-content: space-around;
+  flex-flow: nowrap;
+  div{
+    width: 45%;
   }
 }
 
