--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -171,7 +171,6 @@ button {
   border: none;
   width: 100%;
   font-size: 1rem;
-  font-weight: 700;
   box-sizing: border-box;
   padding: 2.5%;
   font-family: "Montserrat", sans-serif;
@@ -238,6 +237,9 @@ main {
     display: block;
     margin: 2.5%;
     text-transform: uppercase; }
+
+.main-menu-home li {
+  text-align: right; }
 
 /* ==========================================================================
    MENU STYLES
